<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.Signature">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/dusk_yellow"
        android:text="@string/sign_here_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/title_size"
        android:gravity="center"/>
    <RelativeLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white">
        <Button
            android:id="@+id/clear"
            android:layout_width="180dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/hint_clear"
            tools:ignore="ButtonStyle"
            android:textColor="@android:color/white"
            android:background="@color/light_dusk_yellow" />
        <Button
            android:id="@+id/btnUpload"
            android:layout_toRightOf="@+id/clear"
            android:layout_width="180dp"
            android:layout_margin="2dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/hint_Upload"
            tools:ignore="ButtonStyle"
            android:textColor="@android:color/white"
            android:background="@color/light_dusk_yellow" />
    </RelativeLayout>

    <com.kyanogen.signatureview.SignatureView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:sign="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/signature_view"
        sign:enableSignature="true"
        sign:penSize="3dp"
        sign:backgroundColor="#ffffff"
        sign:penColor="@color/colorAccent"/>

</LinearLayout>